@@ -168,6 +168,11 @@
 			android:summary="@string/PreferencesActivity.LoadWithOverviewPreferenceSummary"
 			android:key="BrowserLoadWithOverview" />
 		<CheckBoxPreference
+			android:title="@string/PreferencesActivity.EnableRestoreLastPagePreferenceTitle"			
+			android:summary="@string/PreferencesActivity.EnableRestoreLastPagePreferenceSummary"
+			android:defaultValue="false"
+			android:key="PREFERENCES_BROWSER_RESTORE_LAST_PAGE" />
+		<CheckBoxPreference
 			android:title="@string/PreferencesActivity.EnablePluginsTitle"
 			android:defaultValue="true"
 			android:key="BrowserEnablePluginsEclair" />
